appId: ${APP_ID}
tags:
  - 'util'

---
- runFlow:
    file: '../../../helpers/tap-header-item.yaml'
    env:
      ANDROID_ID: 'rooms-list-view-create-channel'
      IOS_LABEL: 'Create new channel, team, direct message or discussion'
- extendedWaitUntil:
    visible:
      id: new-message-view
    timeout: 60000
- extendedWaitUntil:
    visible:
      id: new-message-view-create-channel
    timeout: 60000
- tapOn:
    id: new-message-view-create-channel
- extendedWaitUntil:
    visible:
      id: select-users-view
    timeout: 60000
- runFlow:
    file: '../../../helpers/tap-header-item.yaml'
    env:
      ANDROID_ID: 'selected-users-view-submit'
      IOS_LABEL: 'Skip'
- extendedWaitUntil:
    visible:
      id: create-channel-view
    timeout: 60000
- tapOn:
    id: create-channel-name
- inputText: ${channelName}
- runFlow: '../../../helpers/hide-keyboard.yaml'

- runFlow:
    when:
      true: ${publicChannel}
    commands:
      - tapOn:
          id: create-channel-type

- scrollUntilVisible:
    element:
      id: create-channel-submit
    timeout: 60000
- tapOn:
    id: create-channel-submit

- extendedWaitUntil:
    visible:
      id: room-view
    timeout: 60000
- runFlow:
    file: '../../../helpers/assert-room-title.yaml'
    env:
      ROOM: ${channelName}
- runFlow: ../../../helpers/go-back.yaml
- extendedWaitUntil:
    visible:
      id: rooms-list-view
    timeout: 60000
- extendedWaitUntil:
    visible:
      id: rooms-list-view-item-${channelName}
    timeout: 60000
