appId: ${APP_ID}
tags:
  - 'util'

---
- extendedWaitUntil:
    visible:
      id: room-members-view-item-${username}
    timeout: 60000
- waitForAnimationToEnd:
    timeout: 2000
- tapOn:
    id: room-members-view-item-${username}
- waitForAnimationToEnd:
    timeout: 2000
- extendedWaitUntil:
    visible:
      id: action-sheet
    timeout: 60000
- extendedWaitUntil:
    visible:
      id: action-sheet
    timeout: 60000
